Changed the form in index.html

--- a/my-registration-app/public/index.html
+++ b/my-registration-app/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>Create your account</h1>
-        <form id="registrationForm">
+        <form id="registrationForm" action="/register" method="post">
             <div class="form-grid"> <!-- 2-column layout -->
                 <div class="input-group">
                     <input type="text" id="firstName" name="firstName" placeholder="First Name" required>
