UPDATE !  : The home page + The account balance which is set by default to 1000

--- a/my-registration-app/public/index.html
+++ b/my-registration-app/public/index.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="input-group">
-                    <input type="date" id="dob" name="dob" placeholder="Date of Birth" required>
+                    <input type="date" id="dob" name="dob" required>
                     <span class="input-focus-border"></span>
                 </div>
 
@@ -89,6 +89,5 @@
     </div>
 
     <script src="script.js"></script>
-
 </body>
 </html>
