--- a/my-registration-app/public/Transaction.html
+++ b/my-registration-app/public/Transaction.html
@@ -8,8 +8,19 @@
         /* Basic styling */
         body {
             font-family: Arial, sans-serif;
+            background-color: #f0f0f0; /* Match home page background */
             text-align: center;
+            padding: 50px 20px; /* Increased padding for a better layout */
+        }
+        .container {
+            background-color: white;
             padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            display: inline-block; /* Center the container */
+        }
+        h1 {
+            color: #333;
         }
         .form-group {
             margin-bottom: 15px;
@@ -18,25 +29,46 @@
             margin-right: 10px;
         }
         input {
-            padding: 5px;
+            padding: 10px; /* Increased padding for better UX */
+            width: 250px; /* Fixed width for input fields */
+            border: 1px solid #ccc; /* Added border */
+            border-radius: 3px; /* Rounded borders */
+        }
+        button {
+            padding: 10px 20px; /* Padding for buttons */
+            background-color: #007bff; /* Blue button color */
+            color: white;
+            border: none;
+            border-radius: 3px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #0056b3; /* Darker blue on hover */
+        }
+        #transactionMessage {
+            margin-top: 20px; /* Space between form and message */
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
-    <h1>Transfer Money</h1>
-    <form id="transferForm">
-        <div class="form-group">
-            <label for="recipientGovID">Recipient Gov ID:</label>
-            <input type="text" id="recipientGovID" required>
-        </div>
-        <div class="form-group">
-            <label for="transferAmount">Amount to Transfer:</label>
-            <input type="number" id="transferAmount" required>
-        </div>
-        <button type="submit">Transfer</button>
-    </form>
+    <div class="container">
+        <h1>Transfer Money</h1>
+        <form id="transferForm">
+            <div class="form-group">
+                <label for="recipientGovID">Recipient Gov ID:</label>
+                <input type="text" id="recipientGovID" required>
+            </div>
+            <div class="form-group">
+                <label for="transferAmount">Amount to Transfer:</label>
+                <input type="number" id="transferAmount" required>
+            </div>
+            <button type="submit">Transfer</button>
+        </form>
 
-    <p id="transactionMessage"></p>
+        <p id="transactionMessage"></p>
+    </div>
 
     <script src="transactions.js"></script> <!-- Link to your transaction JS file -->
     <script>
