--- a/my-registration-app/public/admin.html
+++ b/my-registration-app/public/admin.html
@@ -15,6 +15,15 @@
             padding: 40px;
             margin: 0;
         }
+        #messageContainer {
+            position: fixed; /* Keep it fixed at the top */
+            top: 10px; 
+            right: 10px; 
+            z-index: 1000; /* Ensure it appears above other elements */
+            padding: 10px;
+            border-radius: 5px;
+            display: none; /* Initially hidden */
+        }
         .container {
             background-color: white;
             padding: 40px;
@@ -74,6 +83,8 @@
     </style>
 </head>
 <body>
+    <div id="messageContainer"></div> <!-- Message container for feedback -->
+
     <div class="container">
         <h1>Admin - Monitor Transactions</h1>
         <table id="transactionsTable">
