--- a/my-registration-app/public/Home.html
+++ b/my-registration-app/public/Home.html
@@ -5,33 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Home</title>
     <style>
-        /* Reset some default styles */
-        body {
+       body {
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
             background-color: #e6ecf0; /* Light grey background */
             text-align: center;
         }
+
         .container {
             background-color: #ffffff; /* White background for the container */
-            padding: 30px;
+            padding: 40px; /* Increased padding for better spacing */
             border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             display: inline-block;
-            max-width: 400px;
+            max-width: 1000px; /* Increased the maximum width to fit the table */
             margin-top: 50px;
+            text-align: left; /* Align text to the left */
         }
+
         h1 {
             color: #113c55; /* Twitter blue */
             font-size: 24px;
             margin-bottom: 15px;
         }
+
         .balance {
             font-size: 1.5em;
             color: #28a745; /* Green color for balance */
             margin: 10px 0;
         }
+
         button {
             background-color: #1da1f2; /* Twitter blue */
             color: white;
@@ -43,14 +47,101 @@
             margin: 5px;
             transition: background-color 0.3s ease;
         }
+
         button:hover {
             background-color: #0d8dd9; /* Darker blue on hover */
         }
+
         #logoutButton {
             background-color: #ff4757; /* Red for logout */
         }
+
         #logoutButton:hover {
             background-color: #ff6b81; /* Lighter red on hover */
+        }
+
+        table {
+            width: 100%; /* Make the table full width */
+            border-collapse: collapse;
+            margin-top: 20px; /* Space between balance and the table */
+            overflow-x: auto; /* Allow horizontal scroll for small screens */
+            display: block; /* Set to block to handle overflow */
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for table */
+            border-radius: 8px; /* Rounded corners for table */
+            background-color: #f9f9f9; /* Light background color for table */
+        }
+
+        th, td {
+            border: 1px solid #ccc; /* Light gray border */
+            padding: 12px; /* Increased padding for better readability */
+            text-align: left;
+            transition: background-color 0.3s ease; /* Add transition for hover effect */
+        }
+
+        th {
+            background-color: #007bff; /* Twitter blue */
+            color: white;
+            font-weight: bold; /* Bold font for headers */
+            border-top-left-radius: 8px; /* Rounded corners for top left */
+            border-top-right-radius: 8px; /* Rounded corners for top right */
+        }
+
+        tr:nth-child(even) {
+            background-color: #e9ecef; /* Light gray for even rows */
+        }
+
+        tr:hover {
+            background-color: #d1e7dd; /* Light green on hover */
+        }
+
+        td {
+            color: #333; /* Darker text for readability */
+            font-size: 14px; /* Font size for table data */
+        }
+
+        /* Specific column widths */
+        th:nth-child(1), td:nth-child(1) { width: 15%; } /* Transaction ID */
+        th:nth-child(2), td:nth-child(2) { width: 20%; } /* Amount */
+        th:nth-child(3), td:nth-child(3) { width: 25%; } /* Sender */
+        th:nth-child(4), td:nth-child(4) { width: 25%; } /* Recipient */
+        th:nth-child(5), td:nth-child(5) { width: 10%; } /* Status */
+        th:nth-child(6), td:nth-child(6) { width: 15%; } /* Date */
+
+        /* Additional CSS for better table responsiveness */
+        @media (max-width: 768px) {
+            table {
+                font-size: 12px; /* Smaller font size for smaller screens */
+            }
+            th, td {
+                padding: 8px; /* Reduced padding for smaller screens */
+            }
+        }
+
+        /* Pagination */
+        .pagination {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        .pagination button {
+            background-color: #1da1f2; /* Twitter blue */
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 8px 12px;
+            cursor: pointer;
+            font-size: 14px;
+            margin: 0 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .pagination button:hover {
+            background-color: #0d8dd9; /* Darker blue on hover */
+        }
+
+        .pagination button.active {
+            background-color: #0d8dd9; /* Active page styling */
+            font-weight: bold;
         }
     </style>
 </head>
@@ -61,9 +152,33 @@
         <p class="balance" id="balance">Loading...</p>
         <button id="logoutButton">Logout</button>
         <button class="transaction-button" onclick="goToTransaction()">Transfer Money</button>
+
+        <h2>Your Transaction History</h2>
+        <table id="transactionHistoryTable">
+            <thead>
+                <tr>
+                    <th>Transaction ID</th>
+                    <th>Amount</th>
+                    <th>Sender</th>
+                    <th>Recipient</th>
+                    <th>Status</th>
+                    <th>Date</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Transaction history data will be dynamically inserted here -->
+            </tbody>
+        </table>
+
+        <!-- Pagination section -->
+        <div id="pagination" class="pagination"></div>
     </div>
 
     <script>
+        const rowsPerPage = 10; // Show 10 transactions per page
+        let currentPage = 1; // Initial page
+        let transactions = []; // Global transactions array
+
         // Function to display the home page
         function displayHomePage(firstName, lastName, balance) {
             document.getElementById("welcomeMessage").innerText = `Welcome, ${firstName} ${lastName}!`;
@@ -91,8 +206,8 @@
         })
         .then(data => {
             if (data.success) {
-                // Call the display function with the balance fetched from the server
                 displayHomePage(firstName, lastName, data.balance);
+                fetchTransactionHistory(); // Fetch transaction history after displaying balance
             } else {
                 displayHomePage(firstName, lastName, '0'); // Default balance in case of an error
                 console.error(data.message);
@@ -116,7 +231,85 @@
 
         // Redirect to the transaction page
         function goToTransaction() {
-            window.location.href = 'Transaction.html'; // Redirect to transaction page
+            window.location.href = 'transaction.html'; // Redirect to transaction page
+        }
+
+        // Fetch transaction history
+        function fetchTransactionHistory() {
+            fetch(`/transactionHistory?email=${email}`)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Failed to fetch transaction history.');
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    transactions = data.transactions || []; // Store transactions globally
+                    renderTable(transactions, currentPage); // Initial render
+                })
+                .catch(error => {
+                    console.error('Error fetching transaction history:', error);
+                    displayMessage('Error fetching transaction history. Please try again later.', 'red');
+                });
+        }
+
+        // Render transaction table for current page
+        function renderTable(transactions, page) {
+            const start = (page - 1) * rowsPerPage;
+            const end = start + rowsPerPage;
+            const paginatedTransactions = transactions.slice(start, end);
+
+            // Function to format the date
+            function formatDate(dateString) {
+                const date = new Date(dateString);
+                // Check if the date is valid
+                if (!isNaN(date.getTime())) {
+                    return date.toLocaleString(); // Valid date, format it
+                }
+                return 'N/A'; // Invalid date
+            }
+
+            const tableBody = document.querySelector('#transactionHistoryTable tbody');
+            tableBody.innerHTML = ''; // Clear previous rows
+
+            if (paginatedTransactions.length > 0) {
+                paginatedTransactions.forEach(transaction => {
+                    const row = document.createElement('tr');
+                    row.innerHTML = `
+                        <td>${transaction.id}</td>
+                        <td>${transaction.amount}</td>
+                        <td>${transaction.sender_email}</td>
+                        <td>${transaction.recipient_ssn}</td>
+                        <td>${transaction.status}</td>
+                        <td>${formatDate(transaction.created_at)}</td> <!-- Use created_at here -->
+                    `;
+                    tableBody.appendChild(row);
+                });
+            } else {
+                tableBody.innerHTML = '<tr><td colspan="6">No transaction history found.</td></tr>';
+            }
+
+            updatePagination(transactions.length, page);
+        }
+
+        // Update pagination buttons
+        function updatePagination(totalTransactions, page) {
+            const pagination = document.getElementById('pagination');
+            pagination.innerHTML = ''; // Clear existing buttons
+            const totalPages = Math.ceil(totalTransactions / rowsPerPage);
+
+            for (let i = 1; i <= totalPages; i++) {
+                const button = document.createElement('button');
+                button.textContent = i;
+                if (i === page) {
+                    button.classList.add('active');
+                }
+                button.addEventListener('click', () => {
+                    currentPage = i;
+                    renderTable(transactions, i);
+                });
+                pagination.appendChild(button);
+            }
         }
     </script>
 </body>
