Fixed the remaming issues ugh

--- a/my-registration-app/public/index.html
+++ b/my-registration-app/public/index.html
@@ -84,7 +84,7 @@
 
             <button type="submit">Register</button>
         </form>
-        <p id="message"></p>
+        <div id="message"></div>
         <p>Already have an account? <a href="login.html">Login here</a></p>
     </div>
 
